# caipe_ragas_evaluation

./: .env.example  .gitignore  README.md  pyproject.toml
.agents/: AGENTS.md
.agents/workflows/: code-reviewer.md
docs/: metrics_integration_and_custom_metrics.md  rag_eval_design_docs.md  retrieval_and_answering_integration.md
scripts/: ingest_enterprise_rag_bench.sh  ingest_hotpotqa.sh  query_caipe_agent.sh  query_caipe_kb.sh  restore_datasources.py  run_eval.sh  run_eval_agentic.sh  run_eval_enterprise_rag_bench.sh  run_eval_hotpotqa.sh  run_ingestion.sh  run_model_eval.sh
src/ragas_eval/: agentic_rag.py  callbacks.py  config.py  enterprise_rag_bench_ingest.py  evals.py  hotpotqa_rag_ingest.py  metrics.py  precomputed_rag.py  rag.py
tests/: test_agentic_rag.py  test_config.py  test_enterprise_rag_bench_ingest.py  test_evals_units.py  test_evals_workflow.py  test_hotpotqa_ingest.py  test_patch.py  test_precomputed_rag.py  test_rag.py  test_retrievers.py
